fixed overflown loading problem and added loading page

--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ html {
 body{
   min-width: 1440px;
   max-width: 1440px;
-  overflow-x: hidden;
+  /*overflow-x: hidden;*/
 }
 
 /* Grow */
@@ -30,6 +30,23 @@ body{
     transform: scale(1.1);
 }
 
+.loader{
+  position: fixed;
+  width: 100%;
+  height: 1400px;
+  top: 0;
+  background-color: rgba(255, 100, 0, 1);
+  z-index: 10;
+}
+
+.loading-box{
+  position: fixed;
+  top: 350px;
+  width: 5%;
+  left: 47%;
+  z-index: 11;
+}
+
 .warning{
   position: fixed;
   width: 100%;
@@ -37,7 +54,7 @@ body{
   top: 0;
   text-align: center;
   overflow: hidden;
-  background-color: rgba(255, 0, 0, 0.8);
+  background-color: rgba(255, 1, 0, 0.8);
   color: rgba(255, 255, 255, 1);
   z-index: 10;
   opacity: 0;
